# frosted_beignet

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak_before_rtti_change  Doxyfile  README.md  build_project.sh  diagnose_llvm_config.sh  minimal_ocl_app.c  minimal_ocl_system_app  modernize_backend_cmakelists.sh  tags  test_cmake_config.sh  test_cmake_config_after_rtti_fix.sh  test_cmake_config_final_attempt.sh  update_findllvm_script.sh  verify_llvm.sh
CMake/: FindLLVM.cmake  FindOCLIcd.cmake
backend/src/: CMakeLists.txt
backend/src/backend/: context_emit_helpers.cpp  context_emit_helpers.hpp  gen6_context.cpp  gen6_context.hpp  gen6_encoder.cpp  gen6_encoder.hpp  gen6_instruction.hpp  gen8_context.cpp  gen9_context.cpp  gen_context.cpp  gen_program.cpp  gen_reg_allocation.cpp  gen_reg_allocation_intervals.hpp  gen_reg_allocation_map.hpp  gen_reg_interval.hpp  program.cpp
backend/src/ir/: immediate.cpp
backend/src/libocl/include/: ocl_misc.h
backend/src/libocl/src/: ocl_misc.cl
backend/src/llvm/: ExpandLargeIntegers.cpp  PromoteIntegers.cpp  StripAttributes.cpp  llvm_barrier_nodup.cpp  llvm_bitcode_link.cpp  llvm_callsite_compat.hpp  llvm_device_enqueue.cpp  llvm_gen_backend.cpp  llvm_includes.hpp  llvm_intrinsic_lowering.cpp  llvm_loadstore_optimization.cpp  llvm_passes.cpp  llvm_printf_parser.cpp  llvm_profiling.cpp  llvm_sampler_fix.cpp  llvm_scalarize.cpp
backend/src/sys/: alloc.cpp  alloc.hpp
build_artifact/src/: OCLConfig.h
docs/: BUILD.md  BUILD_FIXES_2025-11-19.md  COMPREHENSIVE_BUILD_ANALYSIS_2025-11-19.md  CONTRIBUTING.md  IMPLEMENTATION_STATUS.md  MODERNIZATION_ANALYSIS.md  PHASE4A_LLVM18_FIXES.md  PHASE4B_OPENCL_AUDIT.md  PHASE4C_GENERATION_VALIDATION.md  PHASE4D_INFRASTRUCTURE_MODERNIZATION.md  PHASE4_MODERNIZATION_STRATEGY.md  PHASE5A_BUILD_STATUS_2025-11-19.md  PHASE5A_FINAL_STATUS.md  PHASE5A_IMPLEMENTATION_PLAN.md  PHASE5A_INTEGRATION_PATCH.cpp  PHASE5A_INTEGRATION_STATUS.md  PHASE5A_PROGRESS.md  PHASE5A_STAGE2_BUILD_REQUIREMENTS.md  PHASE5A_STAGE2_IMPLEMENTATION.md  PHASE5_CODE_MODERNIZATION.md  PROJECT_COMPLETION_SUMMARY.md  PR_CHECKLIST.md  README.md  RELEASE_NOTES.md  REQUIREMENTS.md  SESSION_2025-11-19_PHASE5A_INTEGRATION.md  SESSION_SUMMARY_2025-11-19.md  SESSION_SUMMARY_FINAL_2025-11-19.md  TESTING.md  TROUBLESHOOTING.md
scripts/: build.sh
src/: CMakeLists.txt  GPATH  GRTAGS  GTAGS  cl_device_id.c  cl_gen6_device.h  git_sha1.h
src/intel/: intel_gpgpu.c
tests/: test_register_map.cpp
utests/: CMakeLists.txt
